--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   
   assets:
   - assets/
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/logo_sito_g_nous.png"
